--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     image: confluentinc/cp-zookeeper:latest
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
+
   kafka:
     image: confluentinc/cp-kafka:latest
     depends_on:
@@ -12,17 +13,23 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_MESSAGE_MAX_BYTES: 1048576000  # 1 GB
+      KAFKA_REPLICA_FETCH_MAX_BYTES: 1048576000  # 1 GB
+      KAFKA_FETCH_MAX_BYTES: 1048576000 
     ports:
       - "9092:9092"
+
   spark:
-    image: bitnami/spark:latest
+    build: .  # Użyj Dockerfile do zbudowania obrazu
     ports:
       - "4040:4040"
     volumes:
       - ./spark-apps:/app
+
   jupyter:
-    image: jupyter/all-spark-notebook:latest
+    image: jupyter/pyspark-notebook:latest
     ports:
       - "8888:8888"
+      - "8889:8889"
     volumes:
       - ./notebooks:/home/jovyan/work
